# stm8_started

./: README.md
STM8_helloworld/: CMakeLists.txt  Toolchain-sdcc.cmake  main.c  main.h  stm8s_conf.h  stm8s_it.c  stm8s_it.h
STM8_helloworld/STM8S_StdPeriph_Driver/inc/: fireworks.h  stm8s.h  stm8s_adc1.h  stm8s_adc2.h  stm8s_awu.h  stm8s_beep.h  stm8s_can.h  stm8s_clk.h  stm8s_exti.h  stm8s_flash.h  stm8s_gpio.h  stm8s_i2c.h  stm8s_itc.h  stm8s_iwdg.h  stm8s_rst.h  stm8s_spi.h  stm8s_tim1.h  stm8s_tim2.h  stm8s_tim3.h  stm8s_tim4.h  stm8s_tim5.h  stm8s_tim6.h  stm8s_uart1.h  stm8s_uart2.h  stm8s_uart3.h  stm8s_uart4.h  stm8s_wwdg.h
STM8_helloworld/STM8S_StdPeriph_Driver/src/: fireworks.c  stm8s_adc1.c  stm8s_adc2.c  stm8s_awu.c  stm8s_beep.c  stm8s_can.c  stm8s_clk.c  stm8s_exti.c  stm8s_flash.c  stm8s_gpio.c  stm8s_i2c.c  stm8s_itc.c  stm8s_iwdg.c  stm8s_rst.c  stm8s_spi.c  stm8s_tim1.c  stm8s_tim2.c  stm8s_tim3.c  stm8s_tim4.c  stm8s_tim5.c  stm8s_tim6.c  stm8s_uart1.c  stm8s_uart2.c  stm8s_uart3.c  stm8s_uart4.c  stm8s_wwdg.c
